src/index.css
/**************************  imports  **************************/
@import "tailwindcss";
@import "./../public/font.css";
@custom-variant dark (&:where(.dark, .dark *));

/**************************  tailwind layers  **************************/
@utility container {
    @apply mx-auto py-1 px-2;

}

:root {
    --backgrund: rgb(255, 255, 255);
    --secondary-900: rgb(17, 24, 39);
    --secondary-800: rgb(31, 41, 55);
    --secondary-700: rgb(55, 65, 81);
    --secondary-600: rgb(75, 85, 99);
    --secondary-500: rgb(107, 114, 128);
    --secondary-400: rgb(156, 163, 175);
    --secondary-300: rgb(209, 213, 219);
    --secondary-200: rgb(229, 231, 235);
    --secondary-100: rgb(243, 244, 246);
    --secondary-50: rgb(249, 250, 251);
    --secondary-0: rgb(255, 255, 255);
}

.dark{

    --backgrund: rgb(0, 0, 0);
    --secondary-0: rgb(17, 24, 39);
    --secondary-50: rgb(31, 41, 55);
    --secondary-100: rgb(55, 65, 81);
    --secondary-200: rgb(75, 85, 99);
    --secondary-300: rgb(107, 114, 128);
    --secondary-400: rgb(156, 163, 175);
    --secondary-500: rgb(209, 213, 219);
    --secondary-600: rgb(229, 231, 235);
    --secondary-700: rgb(243, 244, 246);
    --secondary-800: rgb(249, 250, 251);
    --secondary-900: rgb(255, 255, 255);

}


@theme {
    /*fonts*/
    --font-vazir: 'vazir';

    /*colors*/
    --color-backgrund: rgb(255, 255, 255);
    --color-primary-900: rgb(74, 109, 255);
    --color-primary-800: rgb(92, 124, 255);
    --color-primary-700: rgb(110, 138, 255);
    --color-primary-600: rgb(128, 153, 255);
    --color-primary-500: rgb(146, 167, 255);
    --color-primary-400: rgb(164, 182, 255);
    --color-primary-300: rgb(183, 197, 255);
    --color-primary-200: rgb(201, 211, 255);
    --color-primary-100: rgb(219, 226, 255);
    --color-primary-50: rgb(228, 233, 255);
    --color-secondary-900: var(--secondary-900);
    --color-secondary-800: var(--secondary-800);
    --color-secondary-700: var(--secondary-700);
    --color-secondary-600: var(--secondary-600);
    --color-secondary-500: var(--secondary-500);
    --color-secondary-400: var(--secondary-400);
    --color-secondary-300: var(--secondary-300);
    --color-secondary-200: var(--secondary-200);
    --color-secondary-100: var(--secondary-100);
    --color-secondary-50: var(--secondary-50);
    --color-secondary-0: var(--secondary-0);
    --color-success: rgb(0, 192, 115);
    --color-warning: rgb(255, 153, 0);
    --color-error: rgb(255, 71, 87);
    --color-red-500: rgb(239, 68, 68);
    --color-red-300: rgb(252, 165, 165);
    --color-white: rgb(255, 255, 255) ;


}

@layer components {
    .btn{
        @apply text-lg py-1 px-2 rounded-xl transition-all duration-300 shadow-lg dark:shadow-sm
    }

    .btn--primary{
        @apply text-secondary-0 bg-primary-900 shadow-primary-300 hover:bg-primary-800
    }

    .btn--secondary{
        @apply text-secondary-100 bg-secondary-300 shadow-secondary-300 hover:bg-secondary-200
    }

    .btn--danger{
        @apply text-error border border-error
    }

    .input{
        @apply  border border-secondary-200 bg-secondary-0  rounded-2xl p-2 hover:border-primary-500 focus:outline-none focus:bg-secondary-0 focus:border-primary-500 focus:shadow-lg focus:shadow-primary-200 dark:shadow-sm focus:dark:shadow-sm
    }

    .budge{
        @apply px-1.5 py-0.5 rounded-2xl text-center
    }

    .budge--secondary{
        @apply bg-secondary-400/40 text-secondary-700
    }
    .budge--success{
        @apply bg-success text-secondary-0
    }
    .budge--error{
        @apply bg-error text-secondary-0
    }
}








/**************************   resets & configs   **************************/
html{
    scroll-behavior: smooth;

}

body{
    font-family: var(--font-vazir) , sans-serif;
    background-color: var(--backgrund);
    font-size: 1rem;
    color: var(--secondary-800) ;
}

button {
    cursor: pointer;
    outline: none;
}



input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {
    display: none;
}




/************************** react-tag-input **************************/
.rti--container {
    border: 1px solid var(--color-secondary-200)!important;
    border-radius: var(--radius-2xl)!important;
    padding: 0.5rem!important;
    --rti-main: none!important;
}

.rti--container:hover {
    border-color: var(--color-primary-500)!important ;

}.rti--container:focus-within {
     border-color: var(--color-primary-500)!important ;
     box-shadow: 0 4px 15px -3px var(--color-primary-400), 0 4px 6px -4px var(--color-primary-400)!important ;

}

